# bettracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY_PROTOCOL.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/agents/: ameliorateur.md  codeur.md  deployeur.md  documenteur.md  evolueur.md  gardien.md  migrateur.md  moniteur.md  orchestrateur.md  testeur.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 13c765b730fa_add_indexes_on_bets_table.py  3ffb26dea7cf_add_password_reset_tokens.py  54b80c4cf6bf_initial_schema.py  74986ffb1dbb_add_tennis_service_stats.py  7863a5572e7d_add_tennis_matches_table.py  98c59938dddb_add_users_table_and_user_id_fk.py  a1b2c3d4e5f6_add_user_id_and_fk.py  a241498e35b4_add_campaign_model_and_bet_fields.py  admin001_add_is_admin_to_users.py  ai0001_add_ai_conversations.py  b2c3d4e5f6a7_add_notifications_table.py  b3f1a2c4d5e6_add_combo_group_to_bets.py  c3d4e5f6a7b8_cleanup_notification_prefs.py  c4e2f7a8b9d1_add_source_to_bets.py  d4e5f6a7b8c9_add_token_version_to_users.py  d5f3e8a9b0c2_add_user_preferences_table.py  e2f3a4b5c6d7_add_email_2fa_to_users.py  e5f6a7b8c9d0_add_onboarding_fields_to_users.py  e6a4b7c8d9f0_add_bet_bookmaker_edge_note.py  f3g4h5i6j7k8_add_avatar_url_to_users.py  f6a7b8c9d0e1_add_saved_backtests_table.py  f7b8c9d0e1f2_add_campaign_versions.py  g7h8i9j0k1l2_cleanup_bet_model.py  h8i9j0k1l2m3_add_nba_games_table.py  h8i9j1k2l3m4_add_rugby_matches_table.py  h8i9j2k3l4m5_add_mlb_games_table.py  h8i9j3k4l5m6_add_pmu_tables.py  nba0001a2b3c_add_nba_games_table.py  odds0001_add_odds_snapshots.py  rugby0001_add_rugby_matches_table.py  t001_add_totp_to_users.py  v001_add_email_verification_to_users.py  w001_add_dashboard_layout_to_user_preferences.py  w002_add_dashboard_presets_to_user_preferences.py
data/: backtest_grid.csv  backtest_grid_v2.csv  backtest_grid_v3.csv  backtest_grid_v4.csv  backtest_grid_v5.csv  backtest_grid_v6.csv  backtest_prob_only.csv  lgb_best_params.json  xgb_best_params.json
deploy/: Caddyfile  bettracker-api.service  bettracker-worker.service
docs/: AFFILIATIONS_BOOKMAKERS.md  API.md  ARCHITECTURE.md  DATA_MODELS.md  DEPLOY.md  FEATURES.md  FEATURES_INVENTORY.md  ML_PIPELINE.md  PLANS_FEATURES.md  PLANS_PROPOSITION.md  PLATFORM_COMPLETE.md  PRODUCTION_CHECKLIST.md
docs/mockups/: campagne-detail.html  ticket-detail-v2.html
docs/specs/: backtest.md  campaign-detail.md  parametres.md  ticket-detail.md  tickets.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
models/football/: elo_ratings.json
scripts/: backtest_analysis.py  build_elo_snapshot.py  build_features.py  calibration_diagnostic.py  check_bets.py  check_users.py  collect_pmu_fast.py  enrich_tennis_abstract.py  enrich_xg.py  fix_user.py  grid_search.py  grid_search_prob_only.py  grid_search_v2.py  grid_search_v3.py  grid_search_v4.py  grid_search_v5.py  import_nba_odds.py  import_to_prod.py  optimize_football.py  optuna_lgb.py  optuna_optimize.py  optuna_tuning.py  seed_dashboard.py  shap_analysis.py  test_portfolio_api.py  train_and_backtest.py  train_mlb_model.py  train_nba_model.py  train_pmu_model.py  train_rugby_model.py  train_tennis_model.py
src/: cache.py  config.py  database.py  main.py  rate_limit.py
src/api/: admin.py  ai_analyste.py  auth.py  backtest.py  bets.py  campaigns.py  combos.py  dashboard.py  deps.py  feedback.py  health.py  helpers.py  matches.py  notifications.py  portfolio.py  predictions.py  scanner.py  schemas.py  settings.py  stripe_router.py  widgets.py
src/backtest/: engine.py  metrics.py  mlb_engine.py  nba_engine.py  pmu_engine.py  report.py  rugby_engine.py  tennis_engine.py
src/cli/: main.py
src/data/: cleaner.py  (+26 more)
tests/: conftest.py  test_account.py  test_auth.py  test_backtest_save.py  test_betclic_detail.py  test_betclic_dom.py  test_betclic_inner.py  test_betclic_markets.py  test_betclic_scraper.py  test_cache.py  test_campaigns.py  test_dashboard.py  test_health.py  test_notifications.py  test_portfolio.py  test_settings.py
(+155 files in other folders)
