[project]
name = "bettracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.47",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.41.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "seaborn>=0.13.2",
]
